--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Music Player</title>
+  <title>leaks</title>
 </head>
 <body>
   <h1>My Music Player</h1>
 
   <audio controls>
-    <source src="dnb.mp3 type="audio/mp3">
+    <source src="dnb.mp3" type="audio/mp3"
     Your browser does not support the audio tag.
   </audio>
 </body>
