--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>My Music Player</h1>
 
   <audio controls>
-    <source src="dnb.mp3" type="audio/mp3"
+    <source src="trap.mp3" type="audio/mp3"
     Your browser does not support the audio tag.
   </audio>
 </body>
