--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
     audio {
       width: 100%;
       max-width: 400px; /* Adjust the maximum width of the audio player */
-    }
+     }
   </style>
 </head>
 <body>
   <div>
-    <h1>ID r</h1>
+    <h1>NEW ID </h1>    }
+  </style>
+</head>
+<body>
+  <div>
+    <h1>My Music Visualizer</h1>
 
     <audio controls>
       <source src="trap.mp3" type="audio/mp3">
