--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     h1 {
-      color: #fff; /* Change to your desired text color */
+      color: #00FF00; /* Change to your desired text color */
     }
 
     audio {
@@ -33,7 +33,7 @@
 </head>
 <body>
   <div>
-    <h1>My Music Visualizer</h1>
+    <h1>YOU FOUND ME<3</h1>
 
     <audio controls>
       <source src="trap.mp3" type="audio/mp3">
