--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>INTERNETCHILD<3 </title>
 
- <style>
+  <style>
     body {
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-color: #000000 ; /* Change to your desired background color */
+      background: url('aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+
 
     h1 {
       color: #00FF00; /* Change to your desired text color */
