--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>INTERNETCHILD<3 </title>
+  <title>You found me..</title>
 
   <style>
     body {
@@ -16,9 +16,8 @@
       background-size: cover;
     }
 
-
     h1 {
-      color: #00FF00; /* Change to your desired text color */
+      color: #fff; /* Change to your desired text color */
     }
 
     audio {
