--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background: url('aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg') no-repeat center center fixed;
+      background: url(0jdwhf_deb827042b451fbac129655435b528703eacb069.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
@@ -28,7 +28,8 @@
 </head>
 <body>
   <div>
-    <h1>NEW ID </h1>    }
+    <h1>NEW ID </h1>    
+    }
   </style>
 </head>
 <body>
