--- a/index.html
+++ b/index.html
@@ -24,22 +24,54 @@
       width: 100%;
       max-width: 400px; /* Adjust the maximum width of the audio player */
      }
-  </style>
+ </style>
 </head>
 <body>
   <div>
-    <h1>NEW ID </h1>    
-    }
-  </style>
-</head>
-<body>
-  <div>
-    <h1>YOU FOUND ME<3</h1>
+    <h1>The Leaks</h1>
 
-    <audio controls>
-      <source src="trap.mp3" type="audio/mp3">
+    <audio controls id="musicPlayer">
+      <source src="Throw Some Ds- Track 1.mp3" type="audio/mp3">
       Your browser does not support the audio tag.
     </audio>
   </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      var musicPlayer = document.getElementById("musicPlayer");
+
+      var playlist = [
+        {
+          name: 'Ghosts',
+          artist: 'Internet Child',
+          url: 'dnb.mp3',
+          cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
+          lrc: 'URL_TO_YOUR_LYRICS_FILE_1.lrc',
+        },
+        {
+          name: 'Function',
+          artist: 'Internet Child',
+          url: 'kast.mp3.mp3',
+          cover: 'DJ logo Photo.jpg',
+          lrc: 'URL_TO_YOUR_LYRICS_FILE_2.lrc',
+        },
+        // Add more songs following the same format
+      ];
+
+      musicPlayer.addEventListener("ended", function() {
+        // Play the next song when the current one ends
+        var currentIndex = playlist.findIndex(function(item) {
+          return item.url === musicPlayer.currentSrc;
+        });
+
+        var nextIndex = (currentIndex + 1) % playlist.length;
+
+        musicPlayer.src = playlist[nextIndex].url;
+      });
+
+      // Set the initial playlist item
+      musicPlayer.src = playlist[0].url;
+    });
+  </script>
 </body>
 </html>
