--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>You found me..</title>
+  <title>You found me </title>
 
   <style>
     body {
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background: url(0jdwhf_deb827042b451fbac129655435b528703eacb069.jpg') no-repeat center center fixed;
+      background: url('0jdwhf_deb827042b451fbac129655435b528703eacb069.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
@@ -36,7 +36,7 @@
     </audio>
   </div>
 
-  <script>
+ <script>
     document.addEventListener("DOMContentLoaded", function() {
       var musicPlayer = document.getElementById("musicPlayer");
 
