--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 </head>
 <body>
   <div>
-    <h1>The Leaks</h1>
+    <h1>Leaks</h1>
 
-    <audio controls id="musicPlayer">
+    <audio controls id="musicPlayer" controlsList="nodownload">
       <source src="Throw Some Ds- Track 1.mp3" type="audio/mp3">
       Your browser does not support the audio tag.
     </audio>
