--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>You Found it </title>
+  <title>My Radio Station</title>
 
   <style>
     body {
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction: column; /* Added to arrange items vertically */
+      flex-direction: column;
       height: 100vh;
       margin: 0;
-      background: url('0jdwhf_deb827042b451fbac129655435b528703eacb069.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background: #008080; /* Windows 98 teal background color */
     }
 
     h1 {
-      color: #fff; /* Change to your desired text color */
+      color: #fff; /* Windows 98 white text color */
+      font-family: 'Arial', sans-serif; /* Windows 98 font style */
     }
 
     audio {
       width: 100%;
-      max-width: 400px; /* Adjust the maximum width of the audio player */
-      margin-bottom: 20px; /* Added space below the audio player */
+      max-width: 400px;
+      margin-bottom: 20px;
     }
 
     .playlist-buttons {
@@ -37,15 +37,23 @@
       margin: 5px;
       padding: 8px;
       cursor: pointer;
+      background-color: #c0c0c0; /* Windows 98 button background color */
+      border: none;
+      color: #000; /* Windows 98 button text color */
+      font-family: 'Arial', sans-serif; /* Windows 98 font style */
+    }
+
+    .playlist-buttons button:hover {
+      background-color: #808080; /* Windows 98 button hover background color */
     }
   </style>
 </head>
 <body>
   <div>
-    <h1>The Leaks </h1>
+    <h1>My Radio Station</h1>
 
     <audio controls id="musicPlayer" controlsList="nodownload">
-      <source src="Throw Some Ds- Track 1.mp3" type="audio/mp3">
+      <source src=Throw Some Ds- Track 1.mp3" type="audio/mp3">
       Your browser does not support the audio tag.
     </audio>
 
@@ -63,35 +71,28 @@
           artist: 'Internet Child',
           url: 'dnb.mp3',
           cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
+          lrc: 'URL_TO_YOUR_LYRICS_FILE_1.lrc',
         },
         {
-          name: 'Song 2',
-          artist: 'Artist 2',
-          url: 'URL_TO_YOUR_SECOND_MUSIC_FILE.mp3',
-          cover: 'URL_TO_YOUR_COVER_IMAGE_2.jpg',
+          name: 'Function',
+          artist: 'Internet Child',
+          url: 'kast.mp3.mp3',
+          cover: 'DJ logo Photo.jpg',
+          lrc: 'URL_TO_YOUR_LYRICS_FILE_2.lrc',
         },
-        {
-         name: 'Throw Some Ds',
-          artist: 'Internet child ',
-          url: 'Throw Some Ds- Track 1.mp3',
-          cover: 'URL_TO_YOUR_COVER_IMAGE_2.jpg',
-        },
-        // Add more songs following the same format
+        // Add more "stations" following the same format
       ];
 
       playlist.forEach(function(song, index) {
-        // Create a button for each song
         var button = document.createElement("button");
         button.textContent = song.name;
         button.addEventListener("click", function() {
-          // Set the clicked song as the current source
           musicPlayer.src = song.url;
         });
         playlistButtonsContainer.appendChild(button);
       });
 
       musicPlayer.addEventListener("ended", function() {
-        // Play the next song when the current one ends
         var currentIndex = playlist.findIndex(function(item) {
           return item.url === musicPlayer.currentSrc;
         });
@@ -101,10 +102,8 @@
         musicPlayer.src = playlist[nextIndex].url;
       });
 
-      // Set the initial playlist item
       musicPlayer.src = playlist[0].url;
     });
   </script>
 </body>
 </html>
-
