--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <div class="desktop">
     <!-- Mock Apps -->
     <div class="icon" onclick="openApp('browser')">
-      <img src="YOUR_BROWSER_ICON_URL" alt="Browser Icon">
+      <img s<img src="https://icons.iconarchive.com/icons/inipagi/business-economic/128/browser-icon.png" width="128" height="128">" alt="Browser Icon">
       <span>Browser</span>
     </div>
 
     <div class="icon" onclick="openApp('calculator')">
-      <img src="YOUR_CALCULATOR_ICON_URL" alt="Calculator Icon">
+      <img src="<img src="https://icons.iconarchive.com/icons/paomedia/small-n-flat/128/calculator-icon.png" width="128" height="128">" alt="Calculator Icon">
       <span>Calculator</span>
     </div>
 
@@ -32,7 +32,7 @@
   </div>
 
   <div id="radioApp" style="display: none;">
-    <h1>Windows 98 Radio Station</h1>
+    <h1>Internet Child Radio Station</h1>
 
     <audio controls id="musicPlayer" controlsList="nodownload">
       <source src="URL_TO_YOUR_FIRST_MUSIC_FILE.mp3" type="audio/mp3">
@@ -49,18 +49,19 @@
 
       var playlist = [
         {
-          name: 'Classic Hits',
-          artist: 'Various Artists',
-          url: 'YOUR_URL_TO_FIRST_MUSIC_FILE.mp3',
-          cover: 'YOUR_URL_TO_COVER_IMAGE_1.jpg',
-          lrc: 'YOUR_URL_TO_LYRICS_FILE_1.lrc',
+       name: 'Ghosts',
+          artist: 'Internet Child',
+          url: 'dnb.mp3',
+          cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
+         ,
+        },
         },
         {
-          name: '80s Mix',
-          artist: 'Various Artists',
-          url: 'YOUR_URL_TO_SECOND_MUSIC_FILE.mp3',
-          cover: 'YOUR_URL_TO_COVER_IMAGE_2.jpg',
-          lrc: 'YOUR_URL_TO_LYRICS_FILE_2.lrc',
+        name: 'Function',
+          artist: 'Internet Child',
+          url: 'kast.mp3.mp3',
+          cover: 'DJ logo Photo.jpg',
+
         },
         // Add more "stations" following the same format
       ];
