--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <div class="desktop">
     <!-- Mock Apps -->
     <div class="icon" onclick="openApp('browser')">
-      <img s<img src="https://icons.iconarchive.com/icons/inipagi/business-economic/128/browser-icon.png" width="128" height="128">" alt="Browser Icon">
+      <img s<img src="<img src="https://icons.iconarchive.com/icons/inipagi/business-economic/16/browser-icon.png" width="16" height="16">
       <span>Browser</span>
     </div>
 
     <div class="icon" onclick="openApp('calculator')">
-      <img src="<img src="https://icons.iconarchive.com/icons/paomedia/small-n-flat/128/calculator-icon.png" width="128" height="128">" alt="Calculator Icon">
+      <img src="<img src="<img src="https://icons.iconarchive.com/icons/pelfusion/folded-flat/16/Calculator-icon.png" width="16" height="16">>
       <span>Calculator</span>
     </div>
 
@@ -26,7 +26,7 @@
 
     <!-- Radio Station App -->
     <div class="icon" onclick="openApp('radio')">
-      <img src="YOUR_RADIO_ICON_URL" alt="Radio Icon">
+      <img src="<img src="https://icons.iconarchive.com/icons/icons8/windows-8/16/Music-Radio-1-icon.png" width="16" height="16">" alt="Radio Icon">
       <span>Radio</span>
     </div>
   </div>
