--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
   <div class="desktop">
     <!-- Mock Apps -->
     <div class="icon" onclick="openApp('browser')">
-      <img src="https://via.placeholder.com/30" alt="Browser Icon">
+      <img src="Steve-Zondicons-Browser-Window.48.png" alt="Browser Icon">
       <span>Browser</span>
     </div>
 
     <div class="icon" onclick="openApp('calculator')">
-      <img src="https://via.placeholder.com/30" alt="Calculator Icon">
+      <img src="Pelfusion-Folded-Flat-Calculator.48.png" alt="Calculator Icon">
       <span>Calculator</span>
     </div>
 
@@ -87,13 +87,13 @@
 
     <!-- Radio Station App -->
     <div class="icon" onclick="openApp('radio')">
-      <img src="https://via.placeholder.com/30" alt="Radio Icon">
+      <img src="Icons8-Windows-8-Music-Radio-1.48.png" alt="Radio Icon">
       <span>Radio</span>
     </div>
   </div>
 
   <div id="radioApp" style="display: none;">
-    <h1>Windows 98 Radio Station</h1>
+    <h1>Internet Child Radio Station</h1>
 
     <audio controls id="musicPlayer" controlsList="nodownload">
       <source src="URL_TO_YOUR_FIRST_MUSIC_FILE.mp3" type="audio/mp3">
@@ -110,17 +110,16 @@
 
       var playlist = [
         {
-          name: 'Classic Hits',
-          artist: 'Various Artists',
-          url: 'URL_TO_YOUR_FIRST_MUSIC_FILE.mp3',
-          cover: 'URL_TO_YOUR_COVER_IMAGE_1.jpg',
-          lrc: 'URL_TO_YOUR_LYRICS_FILE_1.lrc',
+          name: 'Ghost',
+          artist: 'Internet Child',
+          url: 'dnb.mp3',
+          cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
         },
         {
-          name: '80s Mix',
-          artist: 'Various Artists',
-          url: 'URL_TO_YOUR_SECOND_MUSIC_FILE.mp3',
-          cover: 'URL_TO_YOUR_COVER_IMAGE_2.jpg',
+          name: 'Function',
+          artist: 'Internet Child',
+          url: 'kast.mp3.mp3',
+          cover: 'DJ logo Photo.jpg',
           lrc: 'URL_TO_YOUR_LYRICS_FILE_2.lrc',
         },
         // Add more "stations" following the same format
