--- a/index.html
+++ b/index.html
@@ -118,9 +118,14 @@
         {
           name: 'Function',
           artist: 'Internet Child',
-          url: 'kast.mp3.mp3',
+          url: 'kast.mp3',
           cover: 'DJ logo Photo.jpg',
-          lrc: 'URL_TO_YOUR_LYRICS_FILE_2.lrc',
+        },
+         {
+          name: 'Throw some Ds',
+          artist: 'Internet Child',
+          url: 'Throw Some Ds- Track 1.mp3',
+          cover: 'DJ logo Photo.jpg',
         },
         // Add more "stations" following the same format
       ];
