--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Windows 98 Radio Station</title>
 
   <style>
+    /* Windows 98 desktop styles */
     body {
       background: #008080; /* Windows 98 teal background color */
       margin: 0;
@@ -42,6 +43,7 @@
       text-align: center;
     }
 
+    /* Radio station app styles */
     audio {
       width: 100%;
       max-width: 400px;
@@ -96,7 +98,7 @@
     <h1>Internet Child Radio Station</h1>
 
     <audio controls id="musicPlayer" controlsList="nodownload">
-      <source src="URL_TO_YOUR_FIRST_MUSIC_FILE.mp3" type="audio/mp3">
+      <source src="dnb.mp3" type="audio/mp3">
       Your browser does not support the audio tag.
     </audio>
 
@@ -121,7 +123,7 @@
           url: 'kast.mp3',
           cover: 'DJ logo Photo.jpg',
         },
-         {
+        {
           name: 'Throw some Ds',
           artist: 'Internet Child',
           url: 'Throw Some Ds- Track 1.mp3',
