--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internet child </title>
+  <title>Windows 98 Radio Station</title>
 
   <style>
     /* Windows 98 desktop styles */
@@ -170,4 +170,13 @@
         radioApp.style.display = 'block';
         desktop.style.display = 'none';
       } else if (app === 'browser') {
-        alert('Error: This is a simulation. The
+        alert('Error: This is a simulation. The browser is not functional.');
+      } else if (app === 'calculator') {
+        alert('Error: This is a simulation. The calculator is not functional.');
+      }
+
+      // Add more app functionality as needed
+    }
+  </script>
+</body>
+</html>
