--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internet Child Radio Station</title>
+  <title>Windows 98 Radio Station</title>
 
   <style>
     /* Windows 98 desktop styles */
@@ -78,6 +78,29 @@
     .playlist-buttons button:hover {
       background-color: #808080; /* Windows 98 button hover background color */
     }
+
+    /* Additional styles for radio station page */
+    #radioApp {
+      text-align: center;
+    }
+
+    #backButton {
+      margin-top: 10px;
+      padding: 8px;
+      cursor: pointer;
+      background-color: #c0c0c0; /* Windows 98 button background color */
+      border: none;
+      color: #000; /* Windows 98 button text color */
+      font-family: 'Arial', sans-serif; /* Windows 98 font style */
+    }
+
+    #backButton:hover {
+      background-color: #808080; /* Windows 98 button hover background color */
+    }
+
+    #musicPlayer {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -103,9 +126,9 @@
   </div>
 
   <div id="radioApp" style="display: none;">
-    <h1>Internet Child Radio Station</h1>
+    <button id="backButton" onclick="backToMainPage()">Back to Main Page</button>
 
-    <audio controls id="musicPlayer" controlsList="nodownload">
+    <audio controls id="musicPlayer" controlsList="nodownload" autoplay>
       <source src="dnb.mp3" type="audio/mp3">
       Your browser does not support the audio tag.
     </audio>
@@ -176,6 +199,14 @@
       }
 
       // Add more app functionality as needed
+    }
+
+    function backToMainPage() {
+      var radioApp = document.getElementById("radioApp");
+      var desktop = document.querySelector(".desktop");
+
+      radioApp.style.display = 'none';
+      desktop.style.display = 'grid';
     }
   </script>
 </body>
